--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <div class="text-center">
         <h2 style="font-size: 24px;">Microsoft OneDrive</h2>
         <p>Save your files and photos to OneDrive and access them from any <br> device, anywhere</p>
-        <a class="link1" href="">Learn More ></a>
+        <a class="link1 p-2 bg-dark text-white text-decoration-none" href="">Learn More ></a>
       </div>
     </div>
   </section>
