--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
   <!-- icons section -->
   <section class="container my-5">
     <div class="row icons m-auto text-center">
-      <div class="col-md-3 col-sm-4 text-center">
+      <div class="col-sm-6 col-md-3 p-4 text-center">
         <img
           src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4sQDc?ver=30c2&q=90&m=6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true"
           alt="">
         <p class="mt-3">Choose your Microsoft 365</p>
       </div>
-      <div class="col-md-3 col-sm-4 text-center">
+      <div class="col-sm-6 col-md-3 p-4 text-center">
         <img
           src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4pndL?ver=5217&q=90&m=6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true"
           alt="">
         <p class="mt-3">Explore Surface devices</p>
       </div>
-      <div class="col-md-3 col-sm-4 text-center">
+      <div class="col-sm-6 col-md-3 p-4 text-center">
         <img
           src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RWWl29?ver=addd&q=90&m=6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true"
           alt="">
         <p class="mt-3">Buy Xbox games</p>
       </div>
-      <div class="col-md-3 col-sm-4 text-center">
+      <div class="col-sm-6 col-md-3 p-4 text-center">
         <img
           src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4sQDc?ver=30c2&q=90&m=6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true"
           alt="">
